--- a/package.json
+++ b/package.json
@@ -1,11 +1,40 @@
 {
-  "name": "aws-monorepo",
-  "version": "0.0.0",
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {},
-  "devDependencies": {
-    "typescript": "5.3.3"
-  }
+	"devDependencies": {
+		"@eslint/js": "^9.2.0",
+		"@tsconfig/node20": "^20.1.4",
+		"eslint": "^8.57.0",
+		"husky": "^9.0.11",
+		"jest": "^29.7.0",
+		"lint-staged": "^15.2.2",
+		"prettier": "^3.2.5",
+		"stylelint": "^16.5.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3",
+		"typescript-eslint": "^7.8.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"name": "conflux-spa-ion",
+	"private": true,
+	"scripts": {
+		"build": "sst build",
+		"console": "sst console",
+		"deploy": "sst deploy",
+		"dev": "sst dev next dev",
+		"format": "prettier --write .",
+		"lint": "eslint . --ext .ts --ext .tsx",
+		"prepare": "husky",
+		"remove": "sst remove",
+		"stylelint": "stylelint --fix '**/*.{css,scss}'",
+		"test": "jest --passWithNoTests",
+		"typecheck": "tsc --noEmit"
+	},
+	"type": "module",
+	"version": "0.0.0",
+	"workspaces": [
+		"packages/*"
+	]
 }
