--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "@aws-monorepo/frontend",
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "sst dev vite dev",
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "vite": "^5.2.8"
-  }
+	"name": "aws-nextjs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "sst dev next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.540.0",
+		"@aws-sdk/s3-request-presigner": "^3.540.0",
+		"next": "14.1.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"sst": "^3.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"typescript": "^5"
+	}
 }
